--- a/roles/warfare/files/Dockerfile.attacker
+++ b/roles/warfare/files/Dockerfile.attacker
@@ -1,12 +1,35 @@
 FROM kalilinux/kali-rolling:latest
 
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get upgrade -y
+
+RUN apt-get install -y \
     nmap \
     hydra \
     iputils-ping \
     curl \
     wget \
-    git 
+    jq 
+
+RUN apt-get install -y \
+    netcat-traditional \
+    metasploit-framework \
+    telnet \
+    smbclient \
+    redis-tools \
+    python3 \
+    python3-pip \
+    python3-venv \
+    python2.7 \
+    python2.7-dev
+
+RUN apt-get install -y \
+    awscli \
+    openssh-client \
+    hydra \
+    git \
+    gcc \
+    file \
+    openjdk-11-jre
 
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
