--- a/roles/warfare/files/Dockerfile.attacker
+++ b/roles/warfare/files/Dockerfile.attacker
@@ -16,11 +16,11 @@ RUN apt-get install -y \
     redis-tools \
     python3 \
     python3-pip \
-    python3-venv 
-    # netcat-traditional \
-    # metasploit-framework \
-    # python2.7 \
-    # python2.7-dev
+    python3-venv \
+    netcat-traditional \
+    metasploit-framework \
+    python2.7 \
+    python2.7-dev
 
 RUN apt-get install -y \
     awscli \
